# Image-Processing-with-OpenCV

./: .gitignore  CMakeLists.txt  README.md  build.vs.2019.cmake  build.vs.2022.cmake
data/: masks_coords.json
prj.labs/: CMakeLists.txt
prj.labs/cw01/: CMakeLists.txt  cw01.cpp  cw01.report.md.in.txt
prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
prj.labs/lab02/: CMakeLists.txt  lab02.cpp  lab02.report.md.in.txt
prj.labs/lab03/: lab03.cpp  lab03.report.md.in.txt
prj.labs/lab04/: CMakeLists.txt  lab04.cpp  lab04.report.md.in.txt
prj.labs/task00/: CMakeLists.txt
